26.  Modified default permissions. StarBeam magnets will now be
     automatically accepted by participants. Please see the Options
     panel.
27.  Warp StarBeams. Please see the new context-menu option under Chat
     participants.
28.  Corrected separation between chat windows and the main window with
     respect to SMP.
29.  Removed QMainWindow::closeEvent() from spoton::closeEvent().

0.20 (03/14/2015)

1.   Modified default values of UI elements.
2.   Ability to verify the Poptastic hosts and peers separately.
     The INI settings poptasticVerifyPopHostPeer and
     poptasticVerifySmtpHostPeer have been separated.
3.   Links distribution.
4.   Modified the SMP mechanism so that the parties are prevented
     from explicitly setting future states of other parties.
5.   Updated Qt products to version 5.4.1 on Windows.
6.   Do not update status information in spoton_misc::saveGemini().
7.   Maximized strict-overflow's level.
8.   Serialized the StarBeam data.
9.   Modified the StarBeam analysis tool so that is records the
     missing pulse immediately preceding the first missed pulse.
10.  Set window modality on progress dialogs.
11.  Notify the user if the SQLite (QSQLITE) driver is missing.
12.  Updated NTRU files to 276ae6ae79bd97c835095051ef915861c6b01127.
     The changes provide corrections on PowerPC.
13.  Corrected mutex usage in spoton_crypt::digitalSignature().
14.  Corrected memset() usage in spoton_crypt::publicKeyDecryptNTRU().
     Also modified casts.
15.  Corrected initial displays of communication dialogs.
16.  Post Poptastic messages every 2.5 seconds.
17.  Use spoton_crypt instance methods when available instead of static
     methods.
18.  Removed maximum length restrictions on e-mail postal addresses and
     StarBeam hash keys.
19.  Removed maximum length restrictions on user passphrases.
     The --passphrase and --question-answer options have been modified so
     as to accept at most std::numeric_limits<int>::max()) characters.