@@ -167,7 +167,7 @@
          <attribute name="horizontalHeaderMinimumSectionSize">
           <number>200</number>
          </attribute>
-         <attribute name="verticalHeaderCascadingSectionResizes">
+         <attribute name="horizontalHeaderStretchLastSection">
           <bool>true</bool>
          </attribute>
         </widget>
